fix: fixed navbar on mobile

--- a/LAND-PRO/src/styles/global.css
+++ b/LAND-PRO/src/styles/global.css
@@ -9,11 +9,16 @@
     --color-success: #28a745;
 }
 
+.nav-link {
+    position: relative;
+    display: inline-block;
+}
+
 .nav-link::after {
     content: "";
     position: absolute;
     left: 0;
-    bottom: -1px;
+    bottom: 0; /* 👈 clave */
     width: 100%;
     height: 2px;
     background-color: currentColor;
